cleaned up code

--- a/src/app/cars/cars.component.html
+++ b/src/app/cars/cars.component.html
@@ -78,7 +78,7 @@
           #browsePaginator
           [pageSizeOptions]="[5, 10, 15, 20, 25]"
           showFirstLastButtons
-          aria-label="Select page of filteredLogs"
+          aria-label="Select page"
           class="whitespace-nowrap my-2"
           [pageSize]="pageSize"
           [pageIndex]="pageIndex"
@@ -145,7 +145,7 @@
           #suggestedPaginator
           [pageSizeOptions]="[5, 10, 15, 20, 25]"
           showFirstLastButtons
-          aria-label="Select page of filteredLogs"
+          aria-label="Select page "
           class="whitespace-nowrap my-2"
           [pageSize]="suggestedPageSize"
           [pageIndex]="suggestedPageIndex"
